fix: fixed overflow for images

--- a/src/components/masonry-gallery/masonry-gallery.scss
+++ b/src/components/masonry-gallery/masonry-gallery.scss
@@ -9,7 +9,7 @@ masonry-gallery {
         margin: 0 auto;
         padding: 7px;
         max-height: var(--max-grid-height);
-        overflow: hidden;
+        overflow-y: hidden;
         &::-webkit-scrollbar {
             display: none;
         }
